Complete host function numeric boundary